# dspy-reference-examples

./: .env.example  Dockerfile  README.md  TODO.md  check_setup.py  data_generator.py  inference_demo.py  openapi.foundry.json  ozempic_classifier.py  pyproject.toml
.github/workflows/: ci.yml  publish-platform-images.yml  railway-preview-smoke.yml  railway-production-smoke.yml  release-version.yml
.zed/: settings.json
artifacts/: ozempic_classifier_ae-category_optimized.json  ozempic_classifier_ae-pc_optimized.json  ozempic_classifier_optimized.json  ozempic_classifier_pc-category_optimized.json
data/: test.json  train.json
data/ae-category-classification/: test.json  train.json
data/ae-pc-classification/: test.json  train.json
data/pc-category-classification/: test.json  train.json
docs/: API_ROUTES.md  SOLUTION_SUMMARY.md  deploy-ci.md  foundry-openapi-runbook.md
scripts/: generate_sample_data.py  test_docker_portability.sh
scripts/datagen/: adverse_event_sample_data.py  ae_pc_classification_sample_data.py  complaint_category_sample_data.py
scripts/deploy/: foundry_openapi.py  generate_cloudflare_workers_from_dspy_artifacts.py
src/: __init__.py
src/api/: app.py
src/common/: __init__.py  classifier.py  config.py  data_utils.py  logging.py  paths.py  types.py
src/pipeline/: main.py
src/serving/: __init__.py  service.py
tests/: test_artifact_metadata_update.py  test_foundry_openapi.py  test_integration.py  test_nemotron_sanity.py
tests/routes/: test_deployed_service.py
