[project]
name = "dspy-reference-examples"
version = "0.1.0"
description = "DSPy optimization reference for Ozempic complaint classification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "dspy-ai>=2.5.0",
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.6.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
